Prevent the stencil flickering

--- a/src/components/service/StencilOverlay.scss
+++ b/src/components/service/StencilOverlay.scss
@@ -6,8 +6,5 @@
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
 	-webkit-backface-visibility: hidden;
 }
